# ratrace

./: Cargo.toml  Makefile.toml  README.md  index.html
shaders/: basic.wgsl
src/: app.rs  lib.rs  main.rs
src/ray_tracer/: camera.rs  color.rs  hittable.rs  mod.rs  ray.rs  scene.rs
src/renderer/: mod.rs  vertex.rs  viewport.rs
