[package]
name = "ratrace"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
cfg-if = "1.0.0"
color-eyre = "0.6.3"
env_logger = "0.11.3"
log = "0.4.21"
minifb = "0.25.0"
nalgebra-glm = { version = "0.18.0", features = ["convert-bytemuck"] }
pollster = "0.3.0"
rand = "0.8.5"
rayon = "1.10.0"
wasm-bindgen-futures = "0.4.30"
wgpu = "0.20.0"
winit = "0.29.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.20.0", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
